# blackbox

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  TODO.md  bitwise.bbx  brainfuck.bbx  break.bbs.bbx  build.bat  decompiled.bbx  exec.bbs.bbx  qoq.bbx  test.c
.github/workflows/: c.yml
docs/: ISA.md  debugger.md  docs.md  examples.md  isa.md  lang.md
docs/asm/: DEBUGGER.md  DOCS.md  ISA.md  SYNTAX.md
docs/assembly/: SYNTAX.md  docs.md  isa.md
docs/basic/: DOCS.md  SYNTAX.md
docs/bb/: README.md
examples/: arithmetic.bbx  bitwise.bbx  brainfuck.bbx  clrscr.bbx  getkey.bbx  guess.bbx  helloworld.bbx  io.bbx  jmp.bbx  jzjnz.bbx  mem.bbx  mov.bbx  prime.bbx  stack.bbx  stdin.bbx  string.bbx
examples/assembly/: arithmetic.bbx  bitwise.bbx  brainfuck.bbx  callret.bbx  case.bbx  clrscr.bbx  cmp.bbx  datatypes.bbx  exec.bbx  fizzbuzz.bbx  getkey.bbx  guess.bbx  helloworld.bbx  io.bbx  jmp.bbx  macros.bbx  mem.bbx  mov.bbx  prime.bbx  rand.bbx  read.bbx  sleep.bbx  stack.bbx  stdin.bbx  storeload.bbx  string.bbx  vars.bbx
examples/assembly/demos/: brainfuck.bbx  fizzbuzz.bbx  gameoflife.bbx  prime.bbx
examples/assembly/examples/: argc_argv.bbx  arithmetic.bbx  bitwise.bbx  bss.bbx  callret.bbx  case.bbx  clrscr.bbx  cmp.bbx  datatypes.bbx  debug.bbx  defines.bbx  dumpregs.bbx  exec.bbx  faulthandling.bbx  getenv.bbx  getkey.bbx  globals.bbx  guess.bbx  helloworld.bbx  imm.bbx  io.bbx  jmp.bbx  jmpi.bbx  labels.bbx  macro_library.bbx  macros.bbx  mem.bbx  mov.bbx  nop.bbx  not.bbx  preproc_expr.bbx  printchar.bbx  privileges.bbx  pushpop.bbx  rand.bbx  read.bbx  shifts.bbx  sleep.bbx  stack.bbx  stackperm.bbx  (+6 more)
examples/assembly/good/: fizzbuzz.bbx  gameoflife.bbx  prime.bbx
examples/assembly/simple/: arithmetic.bbx  bitwise.bbx  case.bbx  clrscr.bbx  cmp.bbx  getkey.bbx  guess.bbx  io.bbx  jmpi.bbx  macro_library.bbx  macros.bbx  mem.bbx  mov.bbx  pushpop.bbx  storeload.bbx  vars.bbx
examples/basic/: arithmetic.bbs  asm_block.bbs  bitwise.bbs  break.bbs  call_ret.bbs  clrscr.bbs  const.bbs  continue.bbs  else_if_test.bbs  exec.bbs  fileio.bbs  for_descending.bbs  functions.bbs  getargc_getarg.bbs  getenv.bbs  getkey.bbs  hello.bbs  if_else.bbs  inc_dec.bbs  input.bbs  logic_and_or.bbs  namespaces.bbs  print_expr.bbs  rand.bbs  shifts.bbs  sleep.bbs  stderr.bbs  var_reassignment.bbs  variables.bbs  while_loop.bbs
examples/basic/examples/: arithmetic.bbs  array.bbs  asm_block.bbs  break.bbs  (+28 more)
examples/bb/: helloworld.bb  regprint.bb
examples/demos/: brainfuck.bbx  fizzbuzz.bbx
examples/examples/: cmp.bbx  dumpregs.bbx  macros.bbx  stdin.bbx
src/: compiler.c  data.c  data.cpp  data.h  define.h  define.hpp  fmt.cpp  fmt.h  opcodes.h  tools.c  tools.cpp  tools.h  tools.hpp
src/assembler/: Makefile  README.md  asm.c  assembler.c  tools.c  tools.h
src/bbx-disasm/: README.md  build.rs
src/bbxc-asm/: Cargo.toml  README.md  build.rs
src/bbxc-blackbox/: README.md  source.h
src/bbxc-frontend/: compiler.c  tools.c
src/blackbox/: Makefile  README.md  blackbox.c  blackbox.cpp  debug.c  debug.cpp  debug.h  debug.hpp  debugger.cpp  debugger.hpp  fault.hpp  fmt.cpp  fmt.h  main.cpp  program.cpp  program.hpp  string_table.hpp  vm.cpp  vm.hpp
src/blackboxc/: README.md  asm.c  asm.cpp  asm.h  asm_util.cpp  asm_util.h  asm_util.hpp  assembler.cpp  assembler.hpp  basic.c  basic.cpp  basic.h  basic.hpp  compiler.c  compiler.cpp  encoder.cpp  encoder.hpp  tools.c  tools.cpp  tools.h
src/blackboxd/: blackboxd.cpp
src/disassembler/: Cargo.toml  build.rs
src/interpreter/: Makefile  blackbox.c  debug.c  opcodes.h
src/source/: Cargo.toml  build.rs  source.h
src/utils/: asm_parser.cpp  asm_parser.hpp  data.cpp  data.hpp  fmt.cpp  fmt.hpp  macro_expansion.cpp  macro_expansion.hpp  preprocessor.cpp  preprocessor.hpp  random_utils.cpp  random_utils.hpp  string_utils.cpp  string_utils.hpp  symbol_table.cpp  symbol_table.hpp
vscode/blackbox-basic/: CHANGELOG.md  README.md  blackbox-basic-0.0.1.vsix  language-configuration.json  package.json  vsc-extension-quickstart.md
(+46 files in other folders)
